--- a/css/index.css
+++ b/css/index.css
@@ -63,6 +63,10 @@ header {
           justify-content: space-between;
 }
 
+header.active {
+  height: 100vh;
+}
+
 header .logo {
   padding-left: 20px;
   width: 30px;
@@ -72,6 +76,46 @@ header .menu {
   color: #fff;
   font-size: 20px;
   padding-right: 20px;
+  -webkit-transform: scaleY(0.9);
+          transform: scaleY(0.9);
+  font-weight: 500;
+}
+
+header .nav {
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  opacity: 0;
+  -webkit-transition: .5s;
+  transition: .5s;
+  z-index: -1;
+}
+
+header .nav.active {
+  opacity: 1;
+}
+
+header .nav div {
+  font-size: 30px;
+  color: #fff;
+  padding: 20px 0;
+  text-transform: uppercase;
 }
 
 main {
@@ -175,6 +219,7 @@ main .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
 
 .about .title p {
   font-size: 35px;
+  font-weight: 500;
 }
 
 .about .title img {
@@ -207,6 +252,7 @@ main .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
 
 .photo .title p {
   font-size: 35px;
+  font-weight: 500;
 }
 
 .photo .title img {
@@ -239,6 +285,7 @@ main .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
 
 .video .title p {
   font-size: 35px;
+  font-weight: 500;
 }
 
 .video .title img {
@@ -258,6 +305,7 @@ main .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  width: 56px;
 }
 
 footer {
