--- a/css/index.scss
+++ b/css/index.scss
@@ -28,12 +28,28 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between ;
+    &.active{height:100vh;}
     .logo{
         padding-left: 20px;
         width:30px;
-        img{}
     }
-    .menu{color:#fff;font-size: 20px;padding-right: 20px;}
+    .menu{color:#fff;font-size: 20px;padding-right: 20px;transform: scaleY(.9);font-weight: 500;}
+    .nav{
+        position: fixed;
+        top:50%;
+        transform: translateY(-50%);
+        width:100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        transition: .5s;
+        z-index: -1;
+        &.active{opacity: 1;}
+        div{font-size: 30px;color:#fff;padding:20px 0;text-transform: uppercase;}
+    }
 }
 
 main{
@@ -108,7 +124,7 @@ main{
     text-align: left;
     .title{
         display: flex;justify-content: space-between;align-items: center;
-        p{font-size: 35px;}
+        p{font-size: 35px;font-weight: 500;}
         img{width: 30px;}
     }
     .about_img1{margin-top:20px;overflow: hidden;height: 350px;}
@@ -119,7 +135,7 @@ main{
     text-align: left;background:#e2e2e2;
     .title{
         display: flex;justify-content: space-between;align-items: center;
-        p{font-size: 35px;}
+        p{font-size: 35px;font-weight: 500;}
         img{width: 30px;}
     }
     .about_img1{margin-top:20px;overflow: hidden;height: 350px;}
@@ -130,12 +146,12 @@ main{
     text-align: left;background:#a4afc1;
     .title{
         display: flex;justify-content: space-between;align-items: center;
-        p{font-size: 35px;}
+        p{font-size: 35px;font-weight: 500;}
         img{width: 30px;}
     }
     .about_img1{
         margin-top:20px;overflow: hidden;height: 350px;position:relative;
-        .play_btn{position: absolute;top:50%;left:50%;transform: translate(-50%,-50%);}
+        .play_btn{position: absolute;top:50%;left:50%;transform: translate(-50%,-50%);width:56px;}
     }
 }
 
