--- a/css/index.css
+++ b/css/index.css
@@ -87,7 +87,7 @@ header .nav {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   width: 100%;
-  height: 100vh;
+  height: 0vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -102,6 +102,7 @@ header .nav {
       -ms-flex-align: center;
           align-items: center;
   opacity: 0;
+  display: none;
   -webkit-transition: .5s;
   transition: .5s;
   z-index: -1;
@@ -109,6 +110,10 @@ header .nav {
 
 header .nav.active {
   opacity: 1;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 header .nav div {
@@ -178,7 +183,7 @@ main .swiper .title p {
 }
 
 main .swiper .title .orange {
-  color: #ff5234;
+  color: #d30000;
 }
 
 main .swiper .title span {
@@ -484,5 +489,103 @@ footer .my .site img {
 
 .top_btn a.active {
   opacity: 1;
+}
+
+.main_photo .wrap {
+  padding: 130px 20px 0;
+  position: relative;
+}
+
+.main_photo .wrap .title {
+  background-color: #f2f2f2;
+  text-align: left;
+  font-size: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: fixed;
+  top: 50px;
+  left: 0;
+  width: 100%;
+  padding-bottom: 5px;
+}
+
+.main_photo .wrap .title div {
+  padding-left: 20px;
+}
+
+.main_photo .wrap .title ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 20px;
+}
+
+.main_photo .wrap .title ul li {
+  font-size: 30px;
+}
+
+.main_photo .wrap .title ul li:nth-child(2) {
+  padding-left: 20px;
+}
+
+.main_photo .wrap .title ul li img {
+  width: 20px;
+}
+
+.main_photo .wrap .img_box {
+  padding-top: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.main_photo .wrap .img_box .box {
+  width: 45%;
+  height: 120px;
+  border: 1px solid #000;
+  margin-bottom: 60px;
+}
+
+.main_photo .wrap .img_box .box .img {
+  width: 100%;
+  height: 100%;
+  background-image: url("https://kyohyunkim.github.io/Team-Max/img/10.jpeg");
+  background-size: cover;
+  background-position: center;
+}
+
+.main_photo .wrap .img_box .box .day {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main_photo .wrap .img_box .box .day span {
+  display: block;
+}
+
+.main_photo .wrap .img_box .box .day span:nth-of-type(1) {
+  font-size: 15px;
+  padding-right: 10px;
+}
+
+.main_photo .wrap .img_box .box.active {
+  width: 100%;
+  height: 240px;
 }
 /*# sourceMappingURL=index.css.map */
