--- a/css/index.scss
+++ b/css/index.scss
@@ -39,15 +39,16 @@ header{
         top:50%;
         transform: translateY(-50%);
         width:100%;
-        height: 100vh;
+        height: 0vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         opacity: 0;
+        display: none;
         transition: .5s;
         z-index: -1;
-        &.active{opacity: 1;}
+        &.active{opacity: 1;height: 100vh;display: flex;}
         div{font-size: 30px;color:#fff;padding:20px 0;text-transform: uppercase;cursor: pointer;position: relative;}
         div::after{
             content:"";
@@ -88,7 +89,7 @@ main{
                 font-weight: 600;
                 font-size: 40px;
             }
-            .orange{color: #ff5234;}
+            .orange{color: #d30000;}
             span{font-size: 15px;letter-spacing:0.2px;}
         }
     }
@@ -235,3 +236,58 @@ footer{
 }
 .top_btn .aside_arrow{width:15px;}
 .top_btn a.active{opacity:1;}
+
+
+.main_photo{
+    .wrap{
+        padding:130px 20px 0;
+        position: relative;
+        .title{
+            background-color: #f2f2f2;
+            text-align: left;
+            font-size:40px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: fixed;
+            top: 50px;left:0;
+            width: 100%;
+            padding-bottom: 5px;
+            div{padding-left: 20px;}
+            ul{
+                display: flex;padding:0 20px;
+                li{
+                    &:nth-child(2){padding-left: 20px;}
+                    font-size: 30px;
+                    img{width:20px;}
+                }
+            }
+        }
+        .img_box{
+            padding-top:40px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            .box{
+                width:45%;height: 120px;
+                border: 1px solid #000;
+                margin-bottom: 60px;
+                .img{
+                    width:100%;height:100%;
+                    background-image: url("https://kyohyunkim.github.io/Team-Max/img/10.jpeg");
+                    background-size: cover;
+                    background-position: center;
+                }
+                .day{
+                    display: flex;align-items:center;
+                    span{display: block;}
+                    span:nth-of-type(1){font-size: 15px;padding-right: 10px;}
+                }
+                &.active{
+                    width:100%;height: 240px;
+                }
+            }
+        }
+    }
+    
+}
