--- a/css/index.css
+++ b/css/index.css
@@ -588,4 +588,32 @@ footer .my .site img {
   width: 100%;
   height: 240px;
 }
+
+.main_photo .page {
+  padding: 20px 0 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main_photo .page .number {
+  font-size: 15px;
+  -webkit-transform: translateY(-1px);
+          transform: translateY(-1px);
+  padding: 0 10px;
+}
+
+.main_photo .page .left {
+  width: 10px;
+}
+
+.main_photo .page .right {
+  width: 10px;
+}
 /*# sourceMappingURL=index.css.map */
