--- a/css/index.css
+++ b/css/index.css
@@ -491,6 +491,77 @@ footer .my .site img {
   opacity: 1;
 }
 
+.main_about .wrap {
+  padding: 70px 20px;
+  text-align: left;
+}
+
+.main_about .wrap .title {
+  font-size: 40px;
+  padding-bottom: 10px;
+}
+
+.main_about .wrap .detail {
+  padding-bottom: 50px;
+}
+
+.main_about .wrap .team {
+  padding-bottom: 10px;
+}
+
+.main_about .wrap .team span {
+  font-size: 12px;
+  color: #8c8c8c;
+}
+
+.main_about .wrap .input {
+  border-bottom: 1px solid #000;
+}
+
+.main_about .wrap .input input {
+  border-radius: none;
+  border: none;
+  border-right: 0px;
+  border-top: 0px;
+  border-left: 0px;
+  border-bottom: 0px;
+  background-color: #f2f2f2;
+  height: 30px;
+  line-height: 35px;
+  font-size: 20px;
+  font-weight: 400;
+  padding: 5px 0;
+}
+
+.main_about .wrap .input input:focus {
+  border: none;
+  background: none;
+  color: #000;
+  outline: none;
+}
+
+.main_about .wrap .support {
+  margin-top: 10px;
+  position: relative;
+}
+
+.main_about .wrap .support img {
+  width: 10px;
+  padding-left: 10px;
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+}
+
+.main_about .wrap .support::after {
+  content: "";
+  width: 83px;
+  height: 1px;
+  background-color: #000;
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+}
+
 .main_photo .wrap {
   padding: 130px 20px 0;
   position: relative;
