--- a/css/index.scss
+++ b/css/index.scss
@@ -237,7 +237,49 @@ footer{
 .top_btn .aside_arrow{width:15px;}
 .top_btn a.active{opacity:1;}
 
-
+.main_about{
+    .wrap{
+        padding:70px 20px;
+        text-align:left;
+        .title{font-size: 40px;padding-bottom: 10px;}
+        .detail{padding-bottom: 50px;}
+        .team{
+            padding-bottom: 10px;
+            span{font-size: 12px; color:#8c8c8c;}
+        }
+        .input{
+            border-bottom: 1px solid #000;
+            input{
+                border-radius: none;
+                border:none;
+                border-right:0px; 
+                border-top:0px; 
+                border-left:0px; 
+                border-bottom:0px;
+                background-color: #f2f2f2;
+                height: 30px;
+                line-height: 35px;
+                font-size: 20px;
+                font-weight: 400;
+                padding: 5px 0;
+                
+            }
+            input:focus{border:none;background:none;color:#000;outline: none;}
+        }
+        .support{
+            margin-top:10px;position:relative;
+            img{width:10px;padding-left: 10px; transform: translateY(2px);}
+            &::after{
+                content: "";
+                width:83px;height: 1px;
+                background-color: #000;
+                position: absolute;
+                left:0;
+                bottom:-5px;
+            }
+        }
+    }
+}
 .main_photo{
     .wrap{
         padding:130px 20px 0;
