--- a/css/index.scss
+++ b/css/index.scss
@@ -21,8 +21,8 @@ header{
     position:fixed;
     top:0;left:50%;
     transform: translateX(-50%);
-    background: rgba(0,0,0,0.6);
-    backdrop-filter: blur(10px);
+    background: rgba(0,0,0,0.8);
+    backdrop-filter: blur(20px);
     height:50px;
     transition:.5s;
     display: flex;
@@ -238,8 +238,9 @@ footer{
 .top_btn a.active{opacity:1;}
 
 .main_about{
+    .main_about_img{height: 350px; overflow: hidden;margin-top: 50px;}
     .wrap{
-        padding:70px 20px;
+        padding:20px 20px 100px;
         text-align:left;
         .title{font-size: 40px;padding-bottom: 10px;}
         .detail{padding-bottom: 50px;}
